Fixed filter overflowing.

--- a/src/components/nav/nav.styl
+++ b/src/components/nav/nav.styl
@@ -9,13 +9,15 @@
 .filter
 	display flex
 	justify-content space-between
-	flex-wrap wrap
 
 .form__section + .form__section
 	margin-left 30px
 
 .form__group
 	display flex
+
+.form__group--rooms
+	flex-wrap wrap
 
 .logo
 	width 345px
@@ -65,6 +67,7 @@
 	margin 0
 
 .form__input--select
+	width 100%
 	-webkit-appearance none
 	appearance none
 	padding-right 26px
